--- a/jordan-gltf-bridge/jordan-gltf-bridge.cabal
+++ b/jordan-gltf-bridge/jordan-gltf-bridge.cabal
@@ -42,6 +42,7 @@ library
     , vector >=0.12 && <0.14
     , text >=1.2 && <3.0
     , transformers >=0.5 && <0.7
+    , semialign >=1.1 && <1.3
   default-language: Haskell2010
 
 executable jordan-gltf-bridge-exe
